# modern-cpp-patterns-playground

./: .gitignore  CMakeLists.txt  README.md
Builder/: CMakeLists.txt
Builder/SimpleBuilder/: CMakeLists.txt  html_org_build.h  html_org_build_main.cc
Command/TextEditor/: TextEditor.h  TextEditorMain.cpp
Decorate/TextPrinter/: TextPrinter.h  TextPrinterMain.cpp
Document_Demo/: CMakeLists.txt
Document_Demo/Builder/: CMakeLists.txt
Document_Demo/Builder/ComposedBuilder/: CMakeLists.txt  Task.cc  Task.h  main.cc
Document_Demo/Builder/SimpleBuilder/: CMakeLists.txt  Task.h  (+1 more)
Document_Demo/Factory/: CMakeLists.txt
Documentations/: TODO  从C++编程入手设计模式——单例.md  从C++编程入手设计模式——命令模式.md  从C++编程入手设计模式——外观模式.md  从C++编程入手设计模式——工厂模式.md  从C++编程入手设计模式——模式总结.md  从C++编程入手设计模式——策略设计模式.md  从C++编程入手设计模式——装饰器模式.md  从C++编程入手设计模式——观察者模式.md  从C++编程入手设计模式——访问者模式.md  从C++编程入手设计模式——责任链模式.md
Facade/HomeTheater/: HomeTheater.h  HomeTheaterMain.cpp
FactoryBaseMethod/BurgerCreator/: BurgerCreator.h  BurgerCreatorMain.cpp  CMakeLists.txt
FactoryBaseMethod/NotificationSystem/: CMakeLists.txt  NotificationSystem.h  NotificationSystemMain.cpp
Observer/WeatherForecast/: WeatherForecast.h  WeatherForecastMain.cpp
ResponsibilityChain/OutputHandler/: OutputHandler.h  OutputHandlerMain.cpp
Singleton/GlobalConfig/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  ConfigManager_main.cpp  test_config.txt
Singleton/Logger/: CMakeLists.txt  logger.cpp  logger.h  logger_main.cpp
Strategy/AnimalSound/: AnimalSound.h  AnimalSoundMain.cpp
visitor/areacal/: AreaCal.h  AreaCalMain.cpp
(+8 files in other folders)
